--- a/assets/wr/wr.css
+++ b/assets/wr/wr.css
@@ -246,8 +246,7 @@ table, th, td {
         margin-right: 0;
     }
 }
-@media only screen and (((min-width:320px) and (max-width:800px) and (orientation:portrait)) or
-((min-width:480px) and (max-width:640px) and (orientation:landscape))) {
+@media only screen and (((min-width:320px) and (max-width:800px) and (orientation:portrait)) or ((min-width:480px) and (max-width:640px) and (orientation:landscape))) {
     #layouttoggle {
         display: none;
     }
